Fixed footer baseline alignment

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -227,6 +227,7 @@ body {
     }
     .footer-logo {
       width: 200px;
+      margin-bottom: 7px;
     }
   }
 
